# Portfolio_Projects

./: README.md
Bureaucratic_AI_Agent/agent/: .dockerignore  .env.example  Dockerfile  callback.py  config.py  consumer.py  docker-compose.yml  handler.py  main.py  models.py  pyproject.toml  run_api.py
Bureaucratic_AI_Agent/agent/core/: agent_executor.py  errors.py  handler.py  knowledge_base.py  llm_registry.py  logging_config.py  observability.py  prompt_builder.py  prompt_version_registry.py  security.py  security_patterns.example.json  sentry_setup.py
Bureaucratic_AI_Agent/agent/core/tools/: __init__.py  _fetcher.py  _tesseract.py  _utils.py  _vision.py  document.py  factory.py  stubs.py  utils.py
Bureaucratic_AI_Agent/agent/evals/: runner.py  schemas.py
Bureaucratic_AI_Agent/agent/evals/dataset/: business_reg.json  lease_agreement_md.json  lease_agreement_md_security.json  passport_md_strict.json  passport_md_strict_security.json
Bureaucratic_AI_Agent/agent/evals/evaluators/: judge.py  plan.py  tools.py
Bureaucratic_AI_Agent/agent/evals/fixtures/: generate.py
Bureaucratic_AI_Agent/agent/evals/fixtures/lease_agreement_md/: generate.py
Bureaucratic_AI_Agent/agent/evals/fixtures/passport_md_strict/: generate.py
Bureaucratic_AI_Agent/agent/knowledge_base/procedures/: business_reg.md  lease_agreement_md.md  passport_md.md  passport_md_strict.md
Bureaucratic_AI_Agent/agent/prompts/system/: v1.md  v2.md
Bureaucratic_AI_Agent/agent/tests/: test_consumer.py  test_handler.py
Bureaucratic_AI_Agent/backend/: .dockerignore  .env.example  Dockerfile  Makefile  docker-compose.yml  entrypoint.sh  pyproject.toml
Bureaucratic_AI_Agent/backend/apps/applications/: admin.py  apps.py  constants.py  metrics.py  models.py
Bureaucratic_AI_Agent/backend/apps/applications/api/: callback.py  permissions.py  serializers.py  sse.py  urls.py  views.py
Bureaucratic_AI_Agent/backend/apps/applications/migrations/: 0001_initial.py  0002_alter_application_form_data.py  0003_alter_document_file_format_alter_document_file_name_and_more.py  0004_alter_application_options_and_more.py
Bureaucratic_AI_Agent/backend/apps/applications/tasks/: __init__.py  process_application.py
Bureaucratic_AI_Agent/backend/apps/auth/: admin.py  apps.py  managers.py  models.py
Bureaucratic_AI_Agent/backend/apps/auth/api/: serializers.py  urls.py  (+1 more)
Bureaucratic_AI_Agent/backend/common/logging/: request_id.py
Bureaucratic_AI_Agent/backend/common/mixins/: admin.py  managers.py
Bureaucratic_AI_Agent/backend/config/: celery.py  hmac_auth.py  redis_client.py  storage.py  urls.py  yasg.py
Bureaucratic_AI_Agent/backend/config/settings/: base.py  dev.py  prod.py
Bureaucratic_AI_Agent/backend/observability/prometheus/: prometheus.yml
(+155 files in other folders)
