[project]
name = "bureaucratic-agent"
version = "0.1.0"
description = "AI Agent for the Bureaucratic AI Agent platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "aio-pika>=9.5.0",
    "httpx>=0.28.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.8.0",
    "python-dotenv>=1.2.2",
]