[project]
name = "bureaucratic-agent"
version = "0.1.0"
description = "AI Agent for the Bureaucratic AI Agent platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "aio-pika>=9.5.0",
    "httpx>=0.28.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.8.0",
    "python-dotenv>=1.2.2",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "pdfplumber>=0.11",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "Pillow>=10.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
