[project]
name = "bureaucratic-backend"
version = "0.1.0"
description = "Backend API part of the project"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.80",
    "celery>=5.4.0",
    "django>=6.0.3",
    "redis>=5.0.0",
    "django-filter>=25.2",
    "django-jazzmin>=3.0.4",
    "django-storages>=1.14.6",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-yasg>=1.21.15",
    "pillow>=12.1.1",
    "psycopg[binary]>=3.3.3",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.44.0",
]
